# qca

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  Mainpage.dox  QCA2Config.cmake.in  QcaConfig.cmake.in  README  README.clang-format  TODO  app.pri  base64.cpp  base64.h  certstore.qcm  certtest.cpp  certtest.pro  ciphertest.cpp  ciphertest.pro  cmake_uninstall.cmake.in  confapp.pri  configwin.bat  crypto.prf.cmake  crypto.prf.in  crypto_win.prf  extra.qcm  hashtest.cpp  hashtest.pro  installwin.bat  metainfo.yaml  prepare  qca.pc.cmake  qca.pro  qca.qc  qca2.pc.cmake  (+10 more)
examples/: CMakeLists.txt  examples.doco  examples.pri  examples.pro
examples/aes-cmac/: CMakeLists.txt  aes-cmac.cpp  aes-cmac.pro
examples/base64test/: CMakeLists.txt  base64test.cpp  base64test.pro
examples/certtest/: CMakeLists.txt  certtest.cpp  certtest.pro
examples/ciphertest/: CMakeLists.txt  ciphertest.cpp  ciphertest.pro
examples/cms/: CMakeLists.txt  Userkey.pem  cms.pro  cmsexample.cpp
examples/cmssigner/: TODO  certitem.cpp  certitem.h  certview.ui  certviewdlg.cpp  certviewdlg.h  cmssigner.pro  cmssigner.qrc  keyselect.ui  keyselectdlg.cpp  keyselectdlg.h  keystoreview.h  loadstore.ui  main.cpp  mainwin.ui  modconfig.ui  mylistview.h  prompter.cpp  prompter.h
examples/dtlssocket/: CMakeLists.txt  dtlssocket.cpp  dtlssocket.h  main.cpp
examples/eventhandlerdemo/: CMakeLists.txt  eventhandlerdemo.cpp  eventhandlerdemo.pro
examples/hashtest/: CMakeLists.txt  hashtest.cpp  hashtest.pro
examples/hextest/: CMakeLists.txt  hextest.cpp  hextest.pro
examples/keyloader/: CMakeLists.txt  keyloader.cpp  keyloader.pro
examples/mactest/: CMakeLists.txt  mactest.cpp  mactest.pro
examples/md5crypt/: CMakeLists.txt  md5crypt.cpp  md5crypt.pro
examples/providertest/: CMakeLists.txt  providertest.cpp  providertest.pro
examples/publickeyexample/: CMakeLists.txt  publickeyexample.cpp  publickeyexample.pro
examples/randomtest/: CMakeLists.txt  randomtest.cpp  randomtest.pro
examples/rsatest/: CMakeLists.txt  rsatest.cpp  rsatest.pro
examples/saslclient/: CMakeLists.txt  saslclient.cpp  saslclient.pro
examples/saslserver/: CMakeLists.txt  saslserver.cpp  saslserver.pro
examples/saslservtest/: CMakeLists.txt  saslservtest.cpp  saslservtest.pro
examples/sasltest/: CMakeLists.txt  saslclient.cpp  sasltest.cpp  sasltest.pro
examples/sslservtest/: CMakeLists.txt  sslservtest.cpp  sslservtest.pro
examples/ssltest/: CMakeLists.txt  ssltest.cpp  ssltest.pro
examples/tlssocket/: CMakeLists.txt  main.cpp  tlssocket.cpp  tlssocket.h  tlssocket.pro
plugins/: CMakeLists.txt  qcacyrussasl.cpp  qcacyrussasl.h  qcacyrussasl.pro  qcaopenssl.cpp  qcaopenssl.h  qcaopenssl.pro  qcaopenssl_p.h
plugins/qca-botan/: CMakeLists.txt  README  botan.qcm  qca-botan.cpp  qca-botan.pro  qca-botan.qc  qcextra
plugins/qca-cyrus-sasl/: CMakeLists.txt  README  qca-cyrus-sasl.cpp  qca-cyrus-sasl.pro  qca-cyrus-sasl.qc
plugins/qca-gcrypt/: CMakeLists.txt  README  TODO  hkdf.c  libgcrypt.qcm  pkcs5.c  qca-gcrypt.cpp  qca-gcrypt.pro  qca-gcrypt.qc  qca.qcm
plugins/qca-gnupg/: CMakeLists.txt  README  TODO  gpgaction.cpp  gpgaction.h  gpgop.cpp  gpgop.h  gpgop_p.h  lineconverter.cpp  lineconverter.h  mykeystoreentry.cpp  mykeystoreentry.h  mykeystorelist.cpp  mykeystorelist.h  mymessagecontext.cpp  mymessagecontext.h  myopenpgpcontext.cpp  myopenpgpcontext.h  mypgpkeycontext.cpp  mypgpkeycontext.h  qca-gnupg.cpp  qca-gnupg.pro  qca-gnupg.qc  qca.qcm  ringwatch.cpp  ringwatch.h  utils.cpp  utils.h
plugins/qca-logger/: CMakeLists.txt  README  buildmode.qcm  qca-logger.cpp  qca-logger.pro  qca-logger.qc
plugins/qca-nss/: CMakeLists.txt  README  mozilla_nss.qcm  qca-nss.cpp  qca-nss.pro  qca-nss.qc
plugins/qca-openssl/: CMakeLists.txt  README  TODO  conf.pri  extra.pri  extra.qcm  openssl.qcm  qca-openssl.cpp  qca-openssl.pro  qca-openssl.qc  qca.qcm
plugins/qca-ossl/: CMakeLists.txt  README  TODO  basetlscontext.cpp  basetlscontext.h  certcontext.cpp  certcontext.h  dhkey.cpp  dhkey.h  dsakey.cpp  dsakey.h  dtlscontext.cpp  dtlscontext.h  evpkey.cpp  evpkey.h  gen-tls-parameters.sh  ossl110-compat.h  pkeycontext.cpp  pkeycontext.h  qca-openssl.cpp  qca-openssl.pro  qca-ossl.cpp  qca-ossl.pro  qca-ossl.qc  rsakey.cpp  rsakey.h  tls-parameters-4.csv  tls-parameters.cpp  tlscontext.cpp  tlscontext.h  utils.cpp  utils.h
plugins/qca-pkcs11/: .svnignore  CMakeLists.txt  README  configwin.bat  mech_names.cpp  openssl.qcm  pkcs11-helper-config.h  pkcs11-helper.c  pkcs11-helper.h  pkcs11_helper.qcm  qca-pkcs11.cpp  qca-pkcs11.pro  qca-pkcs11.qc
plugins/qca-sasl/: CMakeLists.txt  README  configure  cyrussasl.qcm  prepare  qca-sasl.cpp  qca-sasl.h  qca-sasl.pro  qca-sasl.qc  qcextra
plugins/qca-softstore/: CMakeLists.txt  README  (+3 more)
src/: CMakeLists.txt  Doxyfile  config-qca.h.cmake  examples.doco  qca.cpp  qca.h  qca_basic.cpp  qca_cert.cpp  qca_core.cpp  qca_default.cpp  qca_keystore.cpp  qca_plugin.cpp  qca_plugin.h  qca_publickey.cpp  qca_safeobj.cpp  qca_safeobj.h  qca_safetimer.cpp  qca_securelayer.cpp  qca_securemessage.cpp  qca_systemstore.h  qca_systemstore_flatfile.cpp  qca_systemstore_mac.cpp  qca_systemstore_win.cpp  qca_textfilter.cpp  qca_tools.cpp  qcaopenssl.cpp  qcaopenssl.h  qcaprovider.h  qt.tag  src.pro
unittest/: CMakeLists.txt  README  TestPlan  base64unittest.cpp  base64unittest.h  bigintunittest.cpp  bigintunittest.h  certunittest.cpp  certunittest.h  checkall  cipherunittest.cpp  cipherunittest.h  dsaunittest.cpp  dsaunittest.h  fixpaths.include  hashunittest.cpp  hashunittest.h  hexunittest.cpp  hexunittest.h  kdfunittest.cpp  kdfunittest.h  keygenunittest.cpp  keygenunittest.h  keylengthunittest.cpp  keylengthunittest.h  kunittest.cpp  kunittest.h  macunittest.cpp  macunittest.h  main.cpp  qtester.cpp  qtester.h  randomunittest.cpp  randomunittest.h  rsaunittest.cpp  rsaunittest.h  securearrayunittest.cpp  securearrayunittest.h  staticunittest.cpp  staticunittest.h  (+5 more)
(+335 files in other folders)
